feat: let allocation read demand from a view and stop writing orders
R4 的全部實作。配貨不再讀寫 ordering 的 `Order`：需求改查 `demand_lines` view 並映射成
allocation 自己的 `Demand`，結果改成寫自己的表並發事件，由 ordering 新增的
`ConfirmOrderUsecase` 收到後推進訂單狀態。

三個問題因此消失：一個交易不再同時修改三個 aggregate；`orders` 只剩 ordering 寫；
`promising.allocation-events` 第一次有 consumer——在此之前配貨結果既走事件、又走同一交易內
的直接寫入，同一件事有兩條路徑陳述而只有一條被消費。

**佇列的排序鍵是 `order_id`。** 不用 `backordered_since`：那是系統的處理時間，retry 與
rebalance 都會改變它，等於讓排程抖動決定客戶之間的先後。也不用 `placed_at`：它可空，且由
我們控制不了時鐘的系統決定——一張三天前下單、今天才同步過來的單會插到已經等候一天的單前面，
而**在單抵達之前，系統對它一無所知，不可能為它保留任何東西**。`order_id` 是 UUID v7，時間戳
編在主鍵裡，等於到達順序，而且已經在 `order_lines` 上。

**佇列的範圍含倉別，且以訂單分組。** 前者讓補一個倉的貨不再撈進別倉的單——它們滿足不了，卻
會佔滿以張數計的喚醒上限，浪費隨倉數線性成長。後者讓一張單的**全部**待配行一起回來，因為
ship-complete 的決策需要看見整籃；這也讓上限的維度與查詢一致（都數張數）。兩者現在就做成
R8 不必重寫的形狀。

**倉別不物化到 `order_lines`。** 物化能建出完全覆蓋的 index，R1 的判準（不可變＋有獨立理由）
也支持得住，但那個理由的全部內容是查詢效能，而沒有任何量測支持它現在就成立。日後要加是純粹
的 schema 擴充，不必回頭改任何呼叫端；反過來先寫進 schema 再發現不需要，就得刪欄位。

實作期間發現並處理六件計畫外的事：

- **無限循環。** translator 原本監聽 ordering 的 `OrderBackordered`，而 ordering 收到缺貨事件
  後會呼叫 `markBackOrdered()`，那會再產生同一個領域事件——「發事件 → 改狀態 → 產生事件 →
  又發事件」永遠跑下去。新增 `OrderBackorderRecorded`，兩個 context 各發各的。
- **釋放路徑 `demand_lines` 幫不上忙**：那個 view 只有「還欠的」行，而取消要釋放的恰恰是
  **已經配到**的那些，它們早就從 view 裡消失了。`stock_reservations` 因此記下 `order_id`——
  那是 allocation 自己的表，「這張單有哪些預留」本來就該由它自己回答。刻意不建外鍵指向
  `orders`。（對照過 Odoo：`stock.move` 只有 `sale_line_id`，但它是 monolith，穿過去毫無代價。）
- **error handling config 不新增**：`CommonErrorHandler` 是單一 bean，Spring Boot 自動套到所有
  listener，再建一個反而讓自動選擇失敗。
- **`OrderAllocatedIntegrationEvent` 與 `BackorderCreatedIntegrationEvent` 缺 `@JsonCreator`。**
  它們在此之前只被序列化，因為那個 topic 沒有 consumer；ordering 一開始消費就在反序列化炸掉。
  **只驗「outbox 有事件」永遠發現不了**——這正是端到端 SIT 選擇把 outbox 餵回 ordering
  （`AllocationOutcomeDrain`）而不是改斷言的理由。
- **八個 SIT 用 `UUID.randomUUID()` 當訂單識別碼。** 排序鍵改成 `order_id` 之後，那些測試的
  佇列順序就是隨機的——「blocker 卡在隊首」那支讀到的根本不是它以為的隊列。改用
  `IdGenerator`：系統裡沒有任何路徑會產出 v4 的訂單 id，那些測試本來就在測一個不存在的情境。
- **`order_lines` 的 index 第三欄補回來**（`(owner