@@ -10,10 +10,9 @@ import com.flowzati.archone.allocation.domain.repository.StockReservationReposit
 import com.flowzati.archone.allocation.domain.service.AllocationOutcome;
 import com.flowzati.archone.allocation.domain.service.AllocationService;
 import com.flowzati.archone.ordering.domain.event.OrderAllocated;
-import com.flowzati.archone.ordering.domain.model.Order;
+import com.flowzati.archone.allocation.domain.model.Demand;
 import com.flowzati.archone.ordering.domain.model.OrderStatus;
-import com.flowzati.archone.ordering.domain.repository.OrderRepository;
-import com.flowzati.archone.testsupport.OrderFixtures;
+import com.flowzati.archone.testsupport.DemandFixtures;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.List;
@@ -42,7 +41,6 @@ class OrderAllocationCoordinatorTest {
   private final Instant now = Instant.parse("2026-07-23T00:00:00Z");
 
   private StockPoolRepository stockPoolRepository;
-  private OrderRepository orderRepository;
   private StockReservationRepository stockReservationRepository;
   private ApplicationEventPublisher eventPublisher;
   private OrderAllocationCoordinator coordinator;
@@ -50,13 +48,11 @@ class OrderAllocationCoordinatorTest {
   @BeforeEach
   void setUp() {
     stockPoolRepository = mock(StockPoolRepository.class);
-    orderRepository = mock(OrderRepository.class);
     stockReservationRepository = mock(StockReservationRepository.class);
     eventPublisher = mock(ApplicationEventPublisher.class);
     coordinator = new OrderAllocationCoordinator(
         new AllocationService(),
         stockPoolRepository,
-        orderRepository,
         stockReservationRepository,
         eventPublisher
     );
@@ -65,39 +61,36 @@ class OrderAllocationCoordinatorTest {
   @Test
   @DisplayName("單筆訂單分配成功時應統一儲存 Order、批次與 Reservation")
   void shouldPersistAllocationWhenAllocationSucceeds() {
-    Order order = pendingOrder("SKU-1", 5);
+    Demand order = pendingDemand("SKU-1", 5);
     StockPool batch = stockPool("SKU-1", 10);
 
     AllocationOutcome outcome = coordinator.allocateOrder(order, List.of(batch), now);
 
     assertThat(outcome).isEqualTo(AllocationOutcome.ALLOCATED);
-    assertThat(order.getStatus()).isEqualTo(OrderStatus.ALLOCATED);
     assertThat(batch.getReservedQuantity()).isEqualTo(5);
-    verify(orderRepository).save(order);
     verify(stockPoolRepository).save(batch);
 
     ArgumentCaptor<StockReservation> reservationCaptor =
         ArgumentCaptor.forClass(StockReservation.class);
     verify(stockReservationRepository).save(reservationCaptor.capture());
     StockReservation reservation = reservationCaptor.getValue();
-    assertThat(reservation.getOrderLineId()).isEqualTo(order.getLines().get(0).getId());
+    assertThat(reservation.getOrderLineId()).isEqualTo(order.lines().getFirst().orderLineId());
     assertThat(reservation.getStockPoolId()).isEqualTo(batch.getId());
     assertThat(reservation.getQuantity()).isEqualTo(5);
 
-    verify(eventPublisher).publishEvent(any(OrderAllocated.class));
     ArgumentCaptor<OrderAllocationCompleted> eventCaptor =
         ArgumentCaptor.forClass(OrderAllocationCompleted.class);
     verify(eventPublisher).publishEvent(eventCaptor.capture());
     // 事件只通知「這張單配好了」，不攜帶配到哪些批——那份資訊在 stock_reservations 裡，
     // 且取消會改變它，事件抄一份只會多一個對不上的來源。
     assertThat(eventCaptor.getValue()).isEqualTo(
-        new OrderAllocationCompleted(order.getId(), now));
+        new OrderAllocationCompleted(order.orderId(), now));
   }
 
   @Test
   @DisplayName("一條行吃到兩批時應產生兩筆預留，數量加總等於該行的量")
   void shouldCreateOneReservationPerBatchTaken() {
-    Order order = pendingOrder("SKU-1", 80);
+    Demand order = pendingDemand("SKU-1", 80);
     StockPool near = StockFixtures.batchExpiringOn("SKU-1", NEAR_EXPIRY, 60, 0);
     StockPool far = StockFixtures.batchExpiringOn("SKU-1", FAR_EXPIRY, 40, 0);
 
@@ -108,7 +101,7 @@ class OrderAllocationCoordinatorTest {
     // 粒度是行 × 批。摺成一張單一筆會丟掉「哪一批是為哪一條行鎖的」，而出貨時要的正是它。
     assertThat(captor.getAllValues()).hasSize(2);
     assertThat(captor.getAllValues()).allSatisfy(reservation ->
-        assertThat(reservation.getOrderLineId()).isEqualTo(order.getLines().get(0).getId()));
+        assertThat(reservation.getOrderLineId()).isEqualTo(order.lines().getFirst().orderLineId()));
     assertThat(captor.getAllValues().stream()
         .mapToInt(StockReservation::getQuantity).sum()).isEqualTo(80);
   }
@@ -116,7 +109,7 @@ class OrderAllocationCoordinatorTest {
   @Test
   @DisplayName("批次寫入應依 (SKU, 效期, 入庫日, id) 排序，不得跟著輸入順序走")
   void shouldWriteBatchesInADeterministicOrderRegardlessOfInputOrder() {
-    Order order = pendingOrder("SKU-1", 100);
+    Demand order = pendingDemand("SKU-1", 100);
     StockPool near = StockFixtures.batchExpiringOn("SKU-1", NEAR_EXPIRY, 60, 0);
     StockPool far = StockFixtures.batchExpiringOn("SKU-1", FAR_EXPIRY, 40, 0);
 
@@ -132,42 +125,42 @@ class OrderAllocationCoordinatorTest {
   @Test
   @DisplayName("單筆訂單分配失敗時不應儲存未變更的批次")
   void shouldNotSaveStockPoolWhenAllocationFails() {
-    Order order = pendingOrder("SKU-1", 5);
+    Demand order = pendingDemand("SKU-1", 5);
     StockPool batch = stockPool("SKU-1", 2);
 
     AllocationOutcome outcome = coordinator.allocateOrder(order, List.of(batch), now);
 
     assertThat(outcome).isEqualTo(AllocationOutcome.INSUFFICIENT_ATP);
-    assertThat(order.getStatus()).isEqualTo(OrderStatus.PENDING);
     assertThat(batch.getReservedQuantity()).isZero();
     verify(stockPoolRepository, never()).save(batch);
-    verifyNoInteractions(orderRepository, stockReservationRepository, eventPublisher);
+    verifyNoInteractions(stockReservationRepository, eventPublisher);
   }
 
   @Test
   @DisplayName("沒有任何可售批時不應寫入任何東西，也不應為了問「為什麼」再查一次庫存")
   void shouldWriteNothingWhenThereIsNoAllocatableStock() {
-    Order order = pendingOrder("SKU-1", 5);
+    Demand order = pendingDemand("SKU-1", 5);
 
     // 「一批都沒有」與「有批但全部過期」的差別屬於庫存狀態，由庫存頁每次重算；訂單這一側
     // 不再為了那個區別多付一次查詢，因為它算出來也沒有不會過期的地方可以放。
     assertThat(coordinator.allocateOrder(order, List.of(), now))
         .isEqualTo(AllocationOutcome.NO_ALLOCATABLE_STOCK);
     verifyNoInteractions(
-        stockPoolRepository, orderRepository, stockReservationRepository, eventPublisher);
+        stockPoolRepository, stockReservationRepository, eventPublisher);
   }
 
   @Test
-  @DisplayName("ATP 不足時應標記欠單並只發布 Domain Event")
+  @DisplayName("ATP 不足時只發缺貨的事實，不寫任何表")
   void shouldBackorderOrderWhenAllocationIsInsufficient() {
-    Order order = pendingOrder("SKU-1", 5);
+    Demand order = pendingDemand("SKU-1", 5);
 
     coordinator.backorderOrder(order, now);
 
-    assertThat(order.getStatus()).isEqualTo(OrderStatus.BACKORDERED);
-    verify(orderRepository).save(order);
-    verify(eventPublisher).publishEvent(any(
-        com.flowzati.archone.ordering.domain.event.OrderBackordered.class));
+    // 發的是 allocation 自己的事實，不是 ordering 的 OrderBackordered——後者由 ordering 收到
+    // 對外事件後才產生。監聽它會讓「發事件→改狀態→產生事件→又發事件」循環下去。
+    verify(eventPublisher).publishEvent(
+        new com.flowzati.archone.allocation.domain.event.OrderBackorderRecorded(
+            order.orderId(), now));
     verifyNoInteractions(stockPoolRepository, stockReservationRepository);
   }
 
@@ -176,12 +169,12 @@ class OrderAllocationCoordinatorTest {
   void shouldWriteNothingWhenThereAreNoBackorders() {
     StockPool batch = stockPool("SKU-1", 10);
 
-    List<Order> result = coordinator.allocateBackorders(List.of(), List.of(batch), now);
+    List<Demand> result = coordinator.allocateBackorders(List.of(), List.of(batch), now);
 
     // 補貨本身已經在 usecase 的 upsert 寫進去了，這裡再存一次只是多一次無謂的寫入與衝突。
     assertThat(result).isEmpty();
     verifyNoInteractions(
-        stockPoolRepository, orderRepository, stockReservationRepository, eventPublisher);
+        stockPoolRepository, stockReservationRepository, eventPublisher);
   }
 
   @Test
@@ -191,8 +184,10 @@ class OrderAllocationCoordinatorTest {
     StockPool far = StockFixtures.batchExpiringOn("SKU-1", FAR_EXPIRY, 40, 20);
     UUID lineId = UUID.randomUUID();
     StockReservation onNear = StockReservation.create(
+        UUID.randomUUID(),
         UUID.randomUUID(), lineId, near.getId(), 60, now.minusSeconds(1));
     StockReservation onFar = StockReservation.create(
+        UUID.randomUUID(),
         UUID.randomUUID(), lineId, far.getId(), 20, now.minusSeconds(1));
 
     boolean released = coordinator.releaseReservations(
@@ -208,7 +203,7 @@ class OrderAllocationCoordinatorTest {
     verify(stockPoolRepository).save(far);
     verify(stockReservationRepository).save(onNear);
     verify(stockReservationRepository).save(onFar);
-    verifyNoInteractions(orderRepository, eventPublisher);
+    verifyNoInteractions(eventPublisher);
   }
 
   @Test
@@ -216,6 +211,7 @@ class OrderAllocationCoordinatorTest {
   void shouldDoNothingWhenReservationHasAlreadyBeenReleased() {
     StockPool batch = StockFixtures.unexpiredBatch("SKU-1", 10, 3);
     StockReservation reservation = StockReservation.create(
+        UUID.randomUUID(),
         UUID.randomUUID(), UUID.randomUUID(), batch.getId(), 3, now.minusSeconds(1));
     Map<UUID, StockPool> batches = Map.of(batch.getId(), batch);
     coordinator.releaseReservations(List.of(reservation), batches, now);
@@ -232,6 +228,7 @@ class OrderAllocationCoordinatorTest {
   void shouldRejectInconsistentReleaseBeforeMutatingEitherAggregate() {
     StockPool batch = StockFixtures.unexpiredBatch("SKU-1", 10, 2);
     StockReservation reservation = StockReservation.create(
+        UUID.randomUUID(),
         UUID.randomUUID(), UUID.randomUUID(), batch.getId(), 3, now.minusSeconds(1));
 
     assertThatThrownBy(() -> coordinator.releaseReservations(
@@ -248,6 +245,7 @@ class OrderAllocationCoordinatorTest {
   @DisplayName("預留指向的批沒被帶進來時應拒絕，不可靜默略過")
   void shouldRejectAReservationWhoseBatchWasNotSupplied() {
     StockReservation orphan = StockReservation.create(
+        UUID.randomUUID(),
         UUID.randomUUID(), UUID.randomUUID(), UUID.randomUUID(), 3, now.minusSeconds(1));
 
     assertThatThrownBy(
@@ -255,11 +253,9 @@ class OrderAllocationCoordinatorTest {
         .isInstanceOf(IllegalArgumentException.class);
   }
 
-  private Order pendingOrder(String sku, int quantity) {
-    Order order =
-        OrderFixtures.pendingOrder(UUID.randomUUID(), sku, quantity, now.minusSeconds(1));
-    order.releaseDomainEvents();
-    return order;
+  private Demand pendingDemand(String sku, int quantity) {
+    return DemandFixtures.demand(
+        com.flowzati.archone.common.IdGenerator.nextId(), sku, quantity, now.minusSeconds(1));
   }
 
   private StockPool stockPool(String sku, int onHandQuantity) {
